force-app/main/default/objects/Customer_Survey_Response__c/Customer_Survey_Response__c.object-meta.xml
<CustomObject>
    <label>Customer Survey Response</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Customer Survey Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Survey Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>