force-app/main/default/objects/Customer_Survey_Response__c/fields/Customer_Survey__c.field-meta.xml
<CustomField>
    <fullName>Customer_Survey__c</fullName>
    <label>Customer Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Customer Survey Responses</relationshipLabel>
    <relationshipName>Customer_Survey_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>