force-app/main/default/objects/Customer_Survey_Response__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Survey Responses</relationshipLabel>
    <relationshipName>Customer_Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>