force-app/main/default/objects/Customer_Survey_Response__c/fields/Question_1__c.field-meta.xml
<CustomField>
    <fullName>Question_1__c</fullName>
    <defaultValue>&apos;How would you rate our service?&apos;</defaultValue>
    <label>Question 1</label>
    <type>TextArea</type>
</CustomField>