force-app/main/default/objects/Customer_Survey_Response__c/fields/Question_2__c.field-meta.xml
<CustomField>
    <fullName>Question_2__c</fullName>
    <defaultValue>&apos;How satisfied are you with our services on a scale of 1 to 10 (1 being low and 10 being high)?&apos;</defaultValue>
    <label>Question 2</label>
    <type>TextArea</type>
</CustomField>