force-app/main/default/objects/Customer_Survey_Response__c/fields/Question_3__c.field-meta.xml
<CustomField>
    <fullName>Question_3__c</fullName>
    <defaultValue>&apos;Any comments or feedback for us?&apos;</defaultValue>
    <label>Question 3</label>
    <type>TextArea</type>
</CustomField>