force-app/main/default/objects/Customer_Survey_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Survey__c</columns>
    <columns>Participant__c</columns>
    <columns>Answer_3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>